--- a/articles/2026-01-05-01.md
+++ b/articles/2026-01-05-01.md
@@ -1,4 +1,6 @@
 # A Year's Difference
+***2026-01-05 by Proud Lobster***
+
 Looking back at the Fall of 2024 feels like a different world with regard to Wumpus. Make no mistake, the game is still not anywhere near ready, but the evolution of both the premise and the technology has been significant.
 
 First a foremost, the game design document has developed to the point where I feel there are realistic goalposts for an initial release, and I am hoping to publish snippets from among those goals in the near future. Over the course of the past 14 months I have started looking at the design of the game from a somewhat academic standpoint since I'm more curious now than I have ever been about whether or not it will actually be fun for other people to play. I don't know if I will ever be fully convinced of that until it's in the hands of the public and strangers start telling me so. But if I try to design the game with some sort of analytical rigor than I can atleast tell myself that I tried!
